@@ -1,4 +1,4 @@
-???+ Question "What is a `Convert-Pheno` mapping file?"
+??? Question "What is a `Convert-Pheno` mapping file?"
     A mapping file is a text file in [YAML](https://en.wikipedia.org/wiki/YAML) format ([JSON](https://en.wikipedia.org/wiki/JSON) is also accepted) that connects a set of variables to a format that is understood by `Convert-Pheno`. This file maps your variables to the required **terms** of the [individuals](https://docs.genomebeacons.org/schemas-md/individuals_defaultSchema) entity from the Beacon v2 models, which serves a center model.
 
     ### Creating a mapping file
@@ -44,45 +44,3 @@
     
     ??? Tip "Defining the values in the property `dictionary`"
         Before assigning values to `dictionary` it's important that you think about which ontologies/terminologies you want to use. The field `project.ontology` defines the ontology for the whole project, but you can also specify a another antology at the Beacon v2 term level. Once you know which ontologies to use, then try searching for such term to get an accorate label for it. For example, if you have chosen `ncit`, you can search for the values within NCIt at [EBI Search](https://www.ebi.ac.uk/ols/ontologies/ncit). `Convert-Pheno` will use these values to retrieve the actual ontology term from its internal databases.
-    
-    ??? Abstract "About text similarity in database searches"
-        `Convert-Pheno` comes with a few pre-configured databases and it will search for ontologies/terminologies there. Two two types of searches can be performed:
-    
-         1. `exact` (default)
-    
-             Retrieves only exact matches for a specified 'label'.
-    
-         2. `mixed` (needs `--search mixed`)
-    
-             The script will begin by attempting an exact match for 'label', and if it is unsuccessful, it will then conduct a search based on string (phrase) similarity and select the ontology term with the highest score. 
-    
-         Example (NCIt ontology): 
-    
-         Search phrase: **Exercise pain management** with `exact` search.
-    
-         - exact match: Exercise Pain Management
-    
-         Search phrase: **Brain Hemorrhage** with `mixed` search.
-    
-         - exact match: NA
-    
-         - similarity match: Intraventricular Brain Hemorrhage
-    
-         `--min-text-similarity-score` sets the minimum value for the Cosine / Sorensen-Dice coefficient. The default value (0.8) is very conservative.
-    
-         Note that `mixed` search requires more computational time and its results can be unpredictable. Please use it with caution.
-    
-         **Example:** 
-     
-         Find below an example of the resulfs for the query `Sudden Death Syndrome` on the local [NCIt](https://ncithesaurus.nci.nih.gov/ncitbrowser) database.
-    
-    
-         | Query                 | Search method  |NCIt match (label) | NCIt code (id) | Cosine | Dice |
-         |                       |                |        |      |     |     |
-         | Sudden Death Syndrome | `exact` |           `NA`                                    |    `NA`      | `NA` | `NA`|
-         |                       | `mixed` | CDISC SDTM Sudden Death Syndrome Type Terminology | NCIT:C101852 | 0.65 | 0.6 |
-         |                       |         | Family History of Sudden Arrythmia Death Syndrome | NCIT:C168019 | 0.65 | 0.6 |
-         |                       |         | Family History of Sudden Infant Death Syndrome    | NCIT:C168209 | 0.65 | 0.6 |
-         |                       |         | Sudden Infant Death Syndrome                      | NCIT:C85173  | 0.86 | 0.86|
-    
-         Here, utilizing the default `--search` method (`exact`) will yield no matches. However, by employing `--search mixed`, we would identify `Sudden Infant Death Syndrome` as it registers the highest `cosine` score. If we had configured the `--min-text-similarity-score` to 0.9, we would not have found any matches.
